--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "@supabase/supabase-js": "^2.33.0"
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
