--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "13.5.4",
@@ -15,12 +15,12 @@
     "@supabase/supabase-js": "^2.33.0"
   },
   "devDependencies": {
-    "eslint": "^8.47.0",
-    "eslint-config-next": "13.5.4",
+    "typescript": "^5.2.2",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "typescript": "^5.2.2",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "13.5.4",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.32",
     "autoprefixer": "^10.4.14"
